deploy/manifests/base/submissions-namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: submissions
  labels:
    ironbook.io/sandbox: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
